--- a/POTMLogParser.vcxproj.filters
+++ b/POTMLogParser.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="src\Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\log_file_fetcher.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\arg_container.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\log_file_fetcher.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
